--- a/client/Startling_Cameos_app/package.json
+++ b/client/Startling_Cameos_app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":".",
+  "homepage": ".",
   "name": "startling-cameos-app",
   "private": true,
   "version": "0.0.0",
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
