--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-URI = 'mongodb+srv://admin:admin@cluster0.f7xesew.mongodb.net/Startling_Cameos-DB?retryWrites=true&w=majority&appName=Cluster0'
+URI = mongodb+srv://admin:ayman@cluster0.f7xesew.mongodb.net/Startling_Cameos-DB?retryWrites=true&w=majority&appName=Cluster0
