--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
+    "express": "^4.18.3",
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0"
   }
